Create ownitemdetails foreign key

--- a/lostAndFind-client/src/app/pages/home/home.component.html
+++ b/lostAndFind-client/src/app/pages/home/home.component.html
@@ -2,21 +2,21 @@
   <!-- <div class="col-md-6 mt-5"> -->
     <carousel>
       <slide>
-        <img src="assets/images/home/3.jpg" alt="first slide"> <!--style="display: block; width: 100%; height: 300px;"-->
+        <img src="assets/images/home/3.jpg" style="width: auto; height: 1000px;" alt="first slide"> <!--style="display: block; width: 100%; height: 300px;"-->
         <div class="carousel-caption d-none d-md-block">
           <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
           <p>Lost & found platform</p>
         </div>
       </slide>
       <slide>
-        <img src="assets/images/home/2.jpg" alt="second slide">
+        <img src="assets/images/home/7.jpg" style="width: auto; height: 1050px;" alt="second slide">
         <div class="carousel-caption d-none d-md-block">
           <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
           <p>Lost & found platform</p>
         </div>
       </slide>
       <slide>
-        <img src="assets/images/home/5.jpg" alt="third slide">
+        <img src="assets/images/home/8.jpg" style="width: auto; height: 1050px;" alt="third slide">
         <div class="carousel-caption d-none d-md-block">
           <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
           <p>Lost & found platform</p>
