--- a/lostAndFind-client/src/styles.scss
+++ b/lostAndFind-client/src/styles.scss
@@ -6,3 +6,4 @@
 // @import "~bootswatch/dist/cyborg/variables";
 @import "~bootstrap/scss/bootstrap";
 // @import "~bootswatch/dist/cyborg/bootswatch";
+// @import "~https://use.fontawesome.com/releases/v5.0.6/css/all.css" ;
