--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -56,9 +56,9 @@
           </div>
 
           <div class="form-group">
-            <input type="button" (click)="bsModalRef.hide()" value="{{'REGISTER.CANCEL_BUTTON' | translate}}"
+            <input type="button" (click)="bsModalRef.hide()" value="{{'LOGIN.CANCEL_BUTTON' | translate}}"
               class="btn float-right cancel_btn">
-            <input type="submit" [disabled]="f.invalid" value="{{'REGISTER.SIGNUP_BUTTON' | translate}}"
+            <input type="submit" [disabled]="f.invalid" value="{{'LOGIN.SIGNIN_BUTTON' | translate}}"
               class="btn float-right login_btn mr-2">
           </div>
 
