--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -6,7 +6,7 @@
     <nav id="sidebar" class="sidebar-wrapper">
       <div class="sidebar-content">
         <div class="sidebar-brand">
-          <a href="#">pro sidebar</a>
+          <a href="#">Welcome User</a>
           <div id="close-sidebar">
             <i class="fas fa-times"></i>
           </div>
