--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -99,6 +99,7 @@
             <p> You can find the easiest police station according to your current location<a href="https://github.com/azouaoui-med/pro-sidebar-template"
                 target="_blank">
                 Github</a>, it contains more themes and background image option</p>
+                <p>Hope You enjoy!!</p>
           </div>
           <div class="form-group col-md-12">
             <iframe
