--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -135,6 +135,14 @@
             </div>
           </div>
 
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="card rounded-0 p-0 shadow-sm">
+              <img
+              src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
+              class="card-img-top rounded-0" alt="Angular pro sidebar">
+            </div>
+          </div>
+
 
         </div>
         <hr>
