--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -140,6 +140,11 @@
               <img
               src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
               class="card-img-top rounded-0" alt="Angular pro sidebar">
+
+              <div class="card-body text-center">
+                  
+              </div>
+
             </div>
           </div>
 
