change the profile

--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -142,7 +142,7 @@
               class="card-img-top rounded-0" alt="Angular pro sidebar">
 
               <div class="card-body text-center">
-                  
+                <h6 class="card-title">User Profile</h6>
               </div>
 
             </div>
