--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -135,6 +135,8 @@
             </div>
           </div>
 
+          
+          
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <div class="card rounded-0 p-0 shadow-sm">
               <img
@@ -144,9 +146,13 @@
               <div class="card-body text-center">
                 <h6 class="card-title">User Profile</h6>
               </div>
-
             </div>
           </div>
+          
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            
+          </div>
+
 
 
         </div>
