make changes of dashboard

--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -161,6 +161,10 @@
             </div>
           </div>
 
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            
+          </div>
+
 
 
         </div>
