--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -162,7 +162,9 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            
+            <div class="card rounded-0 p-0 shadow-sm">
+              
+            </div>
           </div>
 
 
