make the name of the user

--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -18,8 +18,8 @@
               alt="User picture">
           </div>
           <div class="user-info">
-            <span class="user-name">Jhon
-              <strong>mash</strong>
+            <span class="user-name">{{user.fName}}
+              <strong>{{user.lName}}</strong>
             </span>
             <span class="user-role">Administrator</span>
             <span class="user-status">
@@ -163,7 +163,7 @@
 
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <div class="card rounded-0 p-0 shadow-sm">
-              
+
             </div>
           </div>
 
