--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -21,7 +21,7 @@
             <span class="user-name">{{user.fName}}
               <strong>{{user.lName}}</strong>
             </span>
-            <span class="user-role">Administrator</span>
+            <span class="user-role">User</span>
             <span class="user-status">
               <i class="fa fa-circle"></i>
               <span>Online</span>
