make the my  items list

--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -56,7 +56,7 @@
             <li>
               <a href="#">
                 <i class="fa fa-calendar"></i>
-                <span>Calendar</span>
+                <span>Item List</span>
               </a>
             </li>
             <li>
