--- a/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
@@ -1,45 +1,187 @@
 <body>
-  <div class="wrapper ">
-    <div class="sidebar" data-color="white" data-active-color="danger">
-      <div class="logo">
-
+  <div class="page-wrapper chiller-theme toggled">
+    <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+      <i class="fas fa-bars"></i>
+    </a>
+    <nav id="sidebar" class="sidebar-wrapper">
+      <div class="sidebar-content">
+        <div class="sidebar-brand">
+          <a href="#">Welcome User</a>
+          <div id="close-sidebar">
+            <i class="fas fa-times"></i>
+          </div>
+        </div>
+        <div class="sidebar-header">
+          <div class="user-pic">
+            <img class="img-responsive img-rounded"
+              src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
+              alt="User picture">
+          </div>
+          <div class="user-info">
+            <span class="user-name">{{user.fName}}
+              <strong>{{user.lName}}</strong>
+            </span>
+            <span class="user-role">User</span>
+            <span class="user-status">
+              <i class="fa fa-circle"></i>
+              <span>Online</span>
+            </span>
+          </div>
+        </div>
+        <!-- sidebar-header  -->
+        <div class="sidebar-search">
+          <div>
+            <div class="input-group">
+              <input type="text" class="form-control search-menu" placeholder="Search...">
+              <div class="input-group-append">
+                <span class="input-group-text">
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- sidebar-search  -->
+        <div class="sidebar-menu">
+          <ul>
+            <li class="header-menu">
+              <span>General</span>
+            </li>
+            <li>
+              <a href [routerLink]="'/own_item'">
+                <i class="fa fa-book"></i>
+                <span>New Item</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-calendar"></i>
+                <span>Item List</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fa fa-folder"></i>
+                <span>Examples</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- sidebar-menu  -->
       </div>
-      <div class="sidebar-wrapper">
-        <ul class="nav">
-          <li class="active ">
-            <a href="#">
-              <i class="nc-icon nc-bank"></i>
-              <p>Dashboard</p>
-            </a>
-          </li>
-          <li>
-
-            <i class="nc-icon nc-single-02"></i>
-            <p target="_blank" routerLink="/user_profile">Ofiicer Profile</p>
-
-          </li>
-          <li>
-            <a href="./map.html">
-              <i class="nc-icon nc-bell-55"></i>
-              <p>Complaints</p>
-            </a>
-          </li>
-          <li>
-            <a href="./notifications.html">
-              <i class="nc-icon nc-tile-56"></i>
-              <p>Add New Post</p>
-            </a>
-          </li>
-
-
-        </ul>
+      <!-- sidebar-content  -->
+      <div class="sidebar-footer">
+        <a href="#">
+          <i class="fa fa-bell"></i>
+          <span class="badge badge-pill badge-warning notification">3</span>
+        </a>
+        <a href="#">
+          <i class="fa fa-envelope"></i>
+          <span class="badge badge-pill badge-success notification">7</span>
+        </a>
+        <a href="#">
+          <i class="fa fa-cog"></i>
+          <span class="badge-sonar"></span>
+        </a>
+        <a href="#">
+          <i class="fa fa-power-off"></i>
+        </a>
       </div>
-    </div>
+    </nav>
+    <!-- sidebar-wrapper  -->
+    <main class="page-content">
+      <div class="container-fluid">
+        <h2>User Dashboard</h2>
+        <hr>
+        <div class="row">
+          
 
-    <div class="main-panel">
+        </div>
+        <h5>More templates</h5>
+        <hr>
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="card rounded-0 p-0 shadow-sm">
+              <img
+                src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
+                class="card-img-top rounded-0" alt="Angular pro sidebar">
+              <div class="card-body text-center">
+                <h6 class="card-title">User Profile</h6>
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="card rounded-0 p-0 shadow-sm">
+              <img
+                src="https://user-images.githubusercontent.com/25878302/58369258-33f20900-7ef8-11e9-8ff3-b277cb7ed7b4.PNG"
+                class="card-img-top rounded-0" alt="Angular pro sidebar">
+              <div class="card-body text-center">
+                <h6 class="card-title">Angular Dashboard</h6>
+                
+              </div>
+            </div>
+          </div>
 
-      
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="card rounded-0 p-0 shadow-sm">
+              <img
+                src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
+                class="card-img-top rounded-0" alt="Angular pro sidebar">
+              <div class="card-body text-center">
+                <h6 class="card-title">User Profile</h6>
+               
+              </div>
+            </div>
+          </div>
 
-    </div>
+          
+          
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="card rounded-0 p-0 shadow-sm">
+              <img
+              src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
+              class="card-img-top rounded-0" alt="Angular pro sidebar">
+
+              <div class="card-body text-center">
+                <h6 class="card-title">User Profile</h6>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="card rounded-0 p-0 shadow-sm">
+              <img
+              src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
+              class="card-img-top rounded-0" alt="Angular pro sidebar">
+
+              <div class="card-body text-center">
+                <h6 class="card-title">User Profile</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="card rounded-0 p-0 shadow-sm">
+
+            </div>
+          </div>
+
+
+
+        </div>
+        <hr>
+
+        <footer class="text-center">
+          <div class="mb-2">
+        
+          </div>
+    
+        </footer>
+      </div>
+    </main>
+    <!-- page-content" -->
   </div>
+  <!-- page-wrapper --> 
+
 </body>
