--- a/lostAndFind-client/src/app/pages/own-items/own-items.component.html
+++ b/lostAndFind-client/src/app/pages/own-items/own-items.component.html
@@ -40,6 +40,23 @@
                   </div>
                 </div>
 
+                <div class="input-group form-group">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text" id="inputGroupFileAddon01"><i class="fa fa-address-card"></i></span>
+                    </div>
+                    <div class="custom-file">
+                      <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" (change) = "fileChangeEvent($event)">
+                      <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                    </div>
+                  </div>
+                </div>
+
+                <div *ngFor="let item of previewUrls; let elemIndex=index;">
+                  <img height="150" width="300" [src]="item" />
+                  <button (click)="removeImage(elemIndex)">Close</button>
+                </div>
+
 
               </div>
               <!--end col-md-6-->
