--- a/lostAndFind-client/src/app/pages/complain/complain.component.html
+++ b/lostAndFind-client/src/app/pages/complain/complain.component.html
@@ -1,1 +1,144 @@
-<p>complain works!</p>
+<body>
+    <div class="page-wrapper chiller-theme toggled">
+        <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+            <i class="fas fa-bars"></i>
+        </a>
+        <nav id="sidebar" class="sidebar-wrapper">
+            <div class="sidebar-content">
+                <div class="sidebar-brand">
+                    <a href="#">Welcome User</a>
+                    <div id="close-sidebar">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+                <div class="sidebar-header">
+                    <div class="user-pic">
+                        <img class="img-responsive img-rounded"
+                            src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
+                            alt="User picture">
+                    </div>
+                    <div class="user-info">
+                        <span class="user-name">{{user.fName}}
+                            <strong>{{user.lName}}</strong>
+                        </span>
+                        <span class="user-role">User</span>
+                        <span class="user-status">
+                            <i class="fa fa-circle"></i>
+                            <span>Online</span>
+                        </span>
+                    </div>
+                </div>
+                <!-- sidebar-header  -->
+                <div class="sidebar-search">
+                    <div>
+                        <div class="input-group">
+                            <input type="text" class="form-control search-menu" placeholder="Search...">
+                            <div class="input-group-append">
+                                <span class="input-group-text">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- sidebar-search  -->
+                <div class="sidebar-menu">
+                    <ul>
+                        <li class="header-menu">
+                            <span>General</span>
+                        </li>
+                        <li>
+                            <a href [routerLink]="'/own_item'">
+                                <i class="fa fa-book"></i>
+                                <span>New Item</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-calendar"></i>
+                                <span>Item List</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-folder"></i>
+                                <span>Examples</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- sidebar-menu  -->
+            </div>
+            <!-- sidebar-content  -->
+            <div class="sidebar-footer">
+                <a href="#">
+                    <i class="fa fa-bell"></i>
+                    <span class="badge badge-pill badge-warning notification">3</span>
+                </a>
+                <a href="#">
+                    <i class="fa fa-envelope"></i>
+                    <span class="badge badge-pill badge-success notification">7</span>
+                </a>
+                <a href="#">
+                    <i class="fa fa-cog"></i>
+                    <span class="badge-sonar"></span>
+                </a>
+                <a href="#">
+                    <i class="fa fa-power-off"></i>
+                </a>
+            </div>
+        </nav>
+        <!-- sidebar-wrapper  -->
+        <main class="page-content">
+            <div class="container-fluid">
+                <h2>Complains</h2>
+                <hr>
+            
+                <div class="row">
+
+
+                    <div class="group col-md-6">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="Description">Item ID</label>
+                                    <input type="text" class="form-control" id="itemid" placeholder="Item ID">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="Description">Complain ID</label>
+                                    <input type="tetx" class="form-control" id="complainid" placeholder="Complain ID">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputAddress">Nearest Police Station</label>
+                                <input type="text" class="form-control" id="nearest_police_staion"
+                                    placeholder="Nearest Police Station">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="inputAddress">Description</label>
+                                <input type="text" class="form-control" id="description" placeholder="Description">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+
+
+
+
+                </div>
+                <hr>
+
+                <footer class="text-center">
+                    <div class="mb-2">
+
+                    </div>
+
+                </footer>
+            </div>
+        </main>
+        <!-- page-content" -->
+    </div>
+    <!-- page-wrapper -->
+
+</body>
