--- a/lostAndFind-client/src/app/pages/complain/complain.component.html
+++ b/lostAndFind-client/src/app/pages/complain/complain.component.html
@@ -50,13 +50,13 @@
                         <li>
                             <a href [routerLink]="'/own_item'">
                                 <i class="fa fa-book"></i>
-                                <span>New Item</span>
+                                <span>Add New Item</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
                                 <i class="fa fa-calendar"></i>
-                                <span>Item List</span>
+                                <span>Edit Profile</span>
                             </a>
                         </li>
                         <li>
@@ -88,6 +88,9 @@
                 </a>
             </div>
         </nav>
+
+
+        
         <!-- sidebar-wrapper  -->
         <main class="page-content">
             <div class="container-fluid">
