--- a/lostAndFind-client/src/app/pages/complain/complain.component.html
+++ b/lostAndFind-client/src/app/pages/complain/complain.component.html
@@ -50,13 +50,13 @@
                         <li>
                             <a href [routerLink]="'/own_item'">
                                 <i class="fa fa-book"></i>
-                                <span>Add New Item</span>
+                                <span>New Item</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
                                 <i class="fa fa-calendar"></i>
-                                <span>Edit Profile</span>
+                                <span>Item List</span>
                             </a>
                         </li>
                         <li>
@@ -88,28 +88,31 @@
                 </a>
             </div>
         </nav>
-
-
-        
         <!-- sidebar-wrapper  -->
         <main class="page-content">
             <div class="container-fluid">
-                <h2>Complains</h2>
+                <h2>User Dashboard</h2>
                 <hr>
-            
                 <div class="row">
+
+
+                </div>
+                <h5>More templates</h5>
+                <hr>
+                <div class="row">
+
 
 
                     <div class="group col-md-6">
                         <form>
                             <div class="form-row">
                                 <div class="form-group col-md-6">
-                                    <label for="Description">Item ID</label>
-                                    <input type="text" class="form-control" id="itemid" placeholder="Item ID">
+                                    <label for="Description">Item Id</label>
+                                    <input type="text" class="form-control" id="itemid" placeholder="Item ISD">
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <label for="Description">Complain ID</label>
-                                    <input type="tetx" class="form-control" id="complainid" placeholder="Complain ID">
+                                    <label for="Description">Complain Id</label>
+                                    <input type="tetx" class="form-control" id="complainid" placeholder="Complain Id">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -120,8 +123,10 @@
 
                             <div class="form-group">
                                 <label for="inputAddress">Description</label>
-                                <input type="text" class="form-control" id="description" placeholder="Description">
+                                <input type="text" class="form-control" id="description"
+                                    placeholder="Description">
                             </div>
+
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
                     </div>
