--- a/lostAndFind-client/src/app/pages/mod-profile/mod-profile.component.html
+++ b/lostAndFind-client/src/app/pages/mod-profile/mod-profile.component.html
@@ -1,1 +1,229 @@
-<p>mod-profile works!</p>
+<body>
+    <div class="page-wrapper chiller-theme toggled">
+        <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+            <i class="fas fa-bars"></i>
+        </a>
+        <nav id="sidebar" class="sidebar-wrapper">
+            <div class="sidebar-content">
+                <div class="sidebar-brand">
+                    <a href="#">Welcome User</a>
+                    <div id="close-sidebar">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+                <div class="sidebar-header">
+                    <div class="user-pic">
+                        <img class="img-responsive img-rounded"
+                            src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
+                            alt="User picture">
+                    </div>
+                    <div class="user-info">
+                        <span class="user-name">{{user.fName}}
+                            <strong>{{user.lName}}</strong>
+                        </span>
+                        <span class="user-role">Moderator</span>
+                        <span class="user-status">
+                            <i class="fa fa-circle"></i>
+                            <span>Online</span>
+                        </span>
+                    </div>
+                </div>
+                <!-- sidebar-header  -->
+                <div class="sidebar-search">
+                    <div>
+                        <div class="input-group">
+                            <input type="text" class="form-control search-menu" placeholder="Search...">
+                            <div class="input-group-append">
+                                <span class="input-group-text">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- sidebar-search  -->
+                <div class="sidebar-menu">
+                    <ul>
+                        <li class="header-menu">
+                            <span>General</span>
+                        </li>
+                        <li>
+                            <a href [routerLink]="'/own_item'">
+                                <i class="fa fa-book"></i>
+                                <span>Add New Item</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-calendar"></i>
+                                <span>Profile</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-folder"></i>
+                                <span>Examples</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- sidebar-menu  -->
+            </div>
+            <!-- sidebar-content  -->
+            <div class="sidebar-footer">
+                <a href="#">
+                    <i class="fa fa-bell"></i>
+                    <span class="badge badge-pill badge-warning notification">3</span>
+                </a>
+                <a href="#">
+                    <i class="fa fa-envelope"></i>
+                    <span class="badge badge-pill badge-success notification">7</span>
+                </a>
+                <a href="#">
+                    <i class="fa fa-cog"></i>
+                    <span class="badge-sonar"></span>
+                </a>
+                <a href="#">
+                    <i class="fa fa-power-off"></i>
+                </a>
+            </div>
+        </nav>
+        <!-- sidebar-wrapper  -->
+        <main class="page-content">
+            <div class="container-fluid">
+                <h2>Edit Profile</h2>
+                <hr>
+                <div class="row">
+
+
+                </div>
+                
+                <hr>
+                <div class="row">
+
+                    <div class="text-center">
+                        <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
+                          alt="avatar">
+                        <h6>Upload a different photo...</h6>
+                        <input type="file" class="text-center center-block file-upload">
+                      </div>
+                      <br>
+
+
+
+                    <div class="tab-pane" id="settings">
+
+
+                        <hr>
+                        <form class="form" action="##" method="post" id="registrationForm">
+                          <div class="form-group">
+        
+                            <div class="col-xs-6">
+                              <label for="first_name">
+                                <h4>First name</h4>
+                              </label>
+                              <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name"
+                                title="enter your first name if any.">
+                            </div>
+                          </div>
+                          <div class="form-group">
+        
+                            <div class="col-xs-6">
+                              <label for="last_name">
+                                <h4>Last name</h4>
+                              </label>
+                              <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name"
+                                title="enter your last name if any.">
+                            </div>
+                          </div>
+        
+                          <div class="form-group">
+        
+                            <div class="col-xs-6">
+                              <label for="phone">
+                                <h4>Phone</h4>
+                              </label>
+                              <input type="text" class="form-control" name="phone" id="phone" placeholder="enter phone"
+                                title="enter your phone number if any.">
+                            </div>
+                          </div>
+        
+                          <div class="form-group">
+                            <div class="col-xs-6">
+                              <label for="mobile">
+                                <h4>Mobile</h4>
+                              </label>
+                              <input type="text" class="form-control" name="mobile" id="mobile"
+                                placeholder="enter mobile number" title="enter your mobile number if any.">
+                            </div>
+                          </div>
+                          <div class="form-group">
+        
+                            <div class="col-xs-6">
+                              <label for="email">
+                                <h4>Email</h4>
+                              </label>
+                              <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com"
+                                title="enter your email.">
+                            </div>
+                          </div>
+                          <div class="form-group">
+        
+                            <div class="col-xs-6">
+                              <label for="email">
+                                <h4>Location</h4>
+                              </label>
+                              <input type="email" class="form-control" id="location" placeholder="somewhere"
+                                title="enter a location">
+                            </div>
+                          </div>
+                          <div class="form-group">
+        
+                            <div class="col-xs-6">
+                              <label for="password">
+                                <h4>Password</h4>
+                              </label>
+                              <input type="password" class="form-control" name="password" id="password" placeholder="password"
+                                title="enter your password.">
+                            </div>
+                          </div>
+                          <div class="form-group">
+        
+                            <div class="col-xs-6">
+                              <label for="password2">
+                                <h4>Verify</h4>
+                              </label>
+                              <input type="password" class="form-control" name="password2" id="password2"
+                                placeholder="password2" title="enter your password2.">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <div class="col-xs-12">
+                              <br>
+                              <button class="btn btn-lg btn-success pull-right" type="submit"><i
+                                  class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                              <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+
+
+
+
+                </div>
+                <hr>
+
+                <footer class="text-center">
+                    <div class="mb-2">
+
+                    </div>
+
+                </footer>
+            </div>
+        </main>
+        <!-- page-content" -->
+    </div>
+    <!-- page-wrapper -->
+
+</body>
