--- a/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.scss
+++ b/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.scss
@@ -1,102 +1,115 @@
 .register{
-  background: -webkit-linear-gradient(left, grey , #000000 );
-  margin-top: 3%;
-  padding: 3%;
+    background: -webkit-linear-gradient(left, grey , #000000 );
+    margin-top: 3%;
+    padding: 3%;
 }
 .register-left{
-  text-align: center;
-  color: #fff;
-  margin-top: 4%;
+    text-align: center;
+    color: #fff;
+    margin-top: 4%;
 }
 .register-left input{
-  border: none;
-  border-radius: 1.5rem;
-  padding: 2%;
-  width: 60%;
-  background: #f8f9fa;
-  font-weight: bold;
-  color: #383d41;
-  margin-top: 30%;
-  margin-bottom: 3%;
-  cursor: pointer;
+    border: none;
+    border-radius: 1.5rem;
+    padding: 2%;
+    width: 60%;
+    background: #f8f9fa;
+    font-weight: bold;
+    color: #383d41;
+    margin-top: 30%;
+    margin-bottom: 3%;
+    cursor: pointer;
 }
 .register-right{
-  background: #f8f9fa;
-  border-top-left-radius: 10% 50%;
-  border-bottom-left-radius: 10% 50%;
+    background: #f8f9fa;
+    border-top-left-radius: 10% 50%;
+    border-bottom-left-radius: 10% 50%;
 }
 .register-left img{
-  margin-top: 15%;
-  margin-bottom: 5%;
-  width: 25%;
-  -webkit-animation: mover 2s infinite  alternate;
-  animation: mover 1s infinite  alternate;
+    margin-top: 15%;
+    margin-bottom: 5%;
+    width: 25%;
+    -webkit-animation: mover 2s infinite  alternate;
+    animation: mover 1s infinite  alternate;
 }
 @-webkit-keyframes mover {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-20px); }
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
 }
 @keyframes mover {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-20px); }
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-20px); }
 }
 .register-left p{
-  font-weight: lighter;
-  padding: 12%;
-  margin-top: -9%;
+    font-weight: lighter;
+    padding: 12%;
+    margin-top: -9%;
 }
 .register .register-form{
-  padding: 10%;
-  margin-top: 10%;
+    padding: 10%;
+    margin-top: 10%;
 }
 .btnRegister{
-  float: right;
-  margin-top: 10%;
-  border: none;
-  border-radius: 1.5rem;
-  padding: 2%;
-  background: yellow;
-  color: black;
-  font-weight: 600;
-  width: 50%;
-  cursor: pointer;
+    float: right;
+    margin-top: 10%;
+    border: none;
+    border-radius: 1.5rem;
+    padding: 2%;
+    background: yellow;
+    color: black;
+    font-weight: 600;
+    width: 50%;
+    cursor: pointer;
 }
 .register .nav-tabs{
-  margin-top: 3%;
-  border: none;
-  background: grey;
-  border-radius: 1.5rem;
-  width: 200px;
-  float: right;
+    margin-top: 3%;
+    border: none;
+    background: grey;
+    border-radius: 1.5rem;
+    width: 200px;
+    float: right;
 }
 .register .nav-tabs .nav-link{
-  padding: 2%;
-  height: 34px;
-  font-weight: 600;
-  color: #fff;
-  border-top-right-radius: 1.5rem;
-  border-bottom-right-radius: 1.5rem;
+    padding: 2%;
+    height: 34px;
+    font-weight: 600;
+    color: #fff;
+    border-top-right-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
 }
 .register .nav-tabs .nav-link:hover{
-  border: none;
+    border: none;
 }
 .register .nav-tabs .nav-link.active{
-  width: 100px;
-  color: black;
-  border: 2px solid grey;
-  border-top-left-radius: 1.5rem;
-  border-bottom-left-radius: 1.5rem;
+    width: 100px;
+    color: black;
+    border: 2px solid grey;
+    border-top-left-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
 }
 .register-heading{
-  text-align: center;
-  margin-top: 8%;
-  margin-bottom: -15%;
-  color: #495057;
+    text-align: center;
+    margin-top: 8%;
+    margin-bottom: -15%;
+    color: #495057;
 }
 
 
 @media (min-width: 992px){
-.container, .container-sm, .container-md, .container-lg {
-  max-width: inherit;
+  .container, .container-sm, .container-md, .container-lg {
+    max-width: inherit;
+  }
 }
+
+.input-group-prepend span{
+width: 50px;
+background-color: #FFC312;
+color: black;
+border:0 !important;
+}
+
+input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
 }
