--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -54,7 +54,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href [routerLink]="'/lostfounditem'">
                 <i class="fa fa-calendar"></i>
                 <span>Item List</span>
               </a>
@@ -94,7 +94,7 @@
         <h2>User Dashboard</h2>
         <hr>
         <div class="row">
-          
+
 
         </div>
         <h5>More templates</h5>
@@ -107,7 +107,7 @@
                 class="card-img-top rounded-0" alt="Angular pro sidebar">
               <div class="card-body text-center">
                 <h6 class="card-title">User Profile</h6>
-                
+
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
                 class="card-img-top rounded-0" alt="Angular pro sidebar">
               <div class="card-body text-center">
                 <h6 class="card-title">Angular Dashboard</h6>
-                
+
               </div>
             </div>
           </div>
@@ -130,13 +130,13 @@
                 class="card-img-top rounded-0" alt="Angular pro sidebar">
               <div class="card-body text-center">
                 <h6 class="card-title">User Profile</h6>
-               
+
               </div>
             </div>
           </div>
 
-          
-          
+
+
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <div class="card rounded-0 p-0 shadow-sm">
               <img
@@ -148,7 +148,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <div class="card rounded-0 p-0 shadow-sm">
               <img
@@ -174,14 +174,14 @@
 
         <footer class="text-center">
           <div class="mb-2">
-        
+
           </div>
-    
+
         </footer>
       </div>
     </main>
     <!-- page-content" -->
   </div>
-  <!-- page-wrapper --> 
+  <!-- page-wrapper -->
 
 </body>
