add css to mod profile

--- a/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
@@ -54,9 +54,9 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href [routerLink]="'/mod_profile'">
                 <i class="fa fa-calendar"></i>
-                <span>Item List</span>
+                <span>Edit Profile</span>
               </a>
             </li>
             <li>
