--- a/lostAndFind-client/src/app/pages/complain/complain.component.html
+++ b/lostAndFind-client/src/app/pages/complain/complain.component.html
@@ -50,13 +50,13 @@
                         <li>
                             <a href [routerLink]="'/own_item'">
                                 <i class="fa fa-book"></i>
-                                <span>New Item</span>
+                                <span>Add New Item</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href [routerLink]="'/mod_profile'">
                                 <i class="fa fa-calendar"></i>
-                                <span>Item List</span>
+                                <span>Edit Profile</span>
                             </a>
                         </li>
                         <li>
