make changes in moderator

--- a/lostAndFind-client/src/app/pages/complain/complain.component.html
+++ b/lostAndFind-client/src/app/pages/complain/complain.component.html
@@ -21,7 +21,7 @@
                         <span class="user-name">{{user.fName}}
                             <strong>{{user.lName}}</strong>
                         </span>
-                        <span class="user-role">User</span>
+                        <span class="user-role">Moderator</span>
                         <span class="user-status">
                             <i class="fa fa-circle"></i>
                             <span>Online</span>
@@ -48,6 +48,13 @@
                             <span>General</span>
                         </li>
                         <li>
+                            <a href [routerLink]="'/mod_dashboard'">
+                                <i class="fa fa-book"></i>
+                                <span>Dashboard</span>
+                            </a>
+                        </li>
+
+                        <li>
                             <a href [routerLink]="'/own_item'">
                                 <i class="fa fa-book"></i>
                                 <span>Add New Item</span>
@@ -60,9 +67,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <i class="fa fa-folder"></i>
-                                <span>Examples</span>
+                            <a href [routerLink]="'/complain'">
+                                <i class="fa fa-calendar"></i>
+                                <span>Complain</span>
                             </a>
                         </li>
                     </ul>
@@ -91,14 +98,8 @@
         <!-- sidebar-wrapper  -->
         <main class="page-content">
             <div class="container-fluid">
-                <h2>User Dashboard</h2>
-                <hr>
-                <div class="row">
-
-
-                </div>
-                <h5>More templates</h5>
-                <hr>
+                <h2>Complain</h2>
+               
                 <div class="row">
 
 
