Add admin dashboard ui's html

--- a/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
@@ -57,7 +57,7 @@
             <li>
               <a href [routerLink]="'/own_item'">
                 <i class="fa fa-plus"></i>
-                <span>New Item</span>
+                <span>Add New Item</span>
               </a>
             </li>
             <li>
