--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -1,248 +1,103 @@
 <body>
-    <div class="wrapper ">
-      <div class="sidebar" data-color="white" data-active-color="danger">
-        <div class="logo">
-
+  <div class="page-wrapper chiller-theme toggled">
+    <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+      <i class="fas fa-bars"></i>
+    </a>
+    <nav id="sidebar" class="sidebar-wrapper">
+      <div class="sidebar-content">
+        <div class="sidebar-brand">
+          <a href="#">Welcome User</a>
+          <div id="close-sidebar">
+            <i class="fas fa-times"></i>
+          </div>
         </div>
-        <div class="sidebar-wrapper">
-          <ul class="nav">
-            <li class="active ">
-              <a href="#">
-                <i class="nc-icon nc-bank"></i>
-                <p>Dashboard</p>
+        <div class="sidebar-header">
+          <div class="user-pic">
+            <img class="img-responsive img-rounded"
+              src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
+              alt="User picture">
+          </div>
+          <div class="user-info">
+            <span class="user-name">{{user.fName}}
+              <strong>{{user.lName}}</strong>
+            </span>
+            <span class="user-role">Admin</span>
+            <span class="user-status">
+              <i class="fa fa-circle"></i>
+              <span>Online</span>
+            </span>
+          </div>
+        </div>
+        <!-- sidebar-header  -->
+        <div class="sidebar-search">
+          <div>
+            <div class="input-group">
+              <input type="text" class="form-control search-menu" placeholder="Search...">
+              <div class="input-group-append">
+                <span class="input-group-text">
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- sidebar-search  -->
+        <div class="sidebar-menu">
+          <ul>
+            <li class="header-menu">
+              <span>General</span>
+            </li>
+
+            <li>
+              <a href [routerLink]="'/mod_dashboard'">
+                  <i class="fa fa-dashboard"></i>
+                  <span>Dashboard</span>
+              </a>
+          </li>
+            <li>
+              <a href [routerLink]="'/own_item'">
+                <i class="fa fa-plus"></i>
+                <span>Add Moderator</span>
               </a>
             </li>
             <li>
-              <a href="./icons.html">
-                <i class="nc-icon nc-diamond"></i>
-                <p>Icons</p>
+              <a href [routerLink]="'/mod_profile'">
+                <i class="fa fa-user"></i>
+                <span>Edit profile</span>
               </a>
             </li>
-            <li>
-              <a href="./map.html">
-                <i class="nc-icon nc-pin-3"></i>
-                <p>Maps</p>
-              </a>
-            </li>
-            <li>
-              <a href="./notifications.html">
-                <i class="nc-icon nc-bell-55"></i>
-                <p>Notifications</p>
-              </a>
-            </li>
-            <li>
-              <a href="./user.html">
-                <i class="nc-icon nc-single-02"></i>
-                <p>User Profile</p>
-              </a>
-            </li>
-            <li>
-              <a href="./tables.html">
-                <i class="nc-icon nc-tile-56"></i>
-                <p>Table List</p>
-              </a>
-            </li>
-            <li>
-              <a href="./typography.html">
-                <i class="nc-icon nc-caps-small"></i>
-                <p>Typography</p>
-              </a>
-            </li>
-            <li class="active-pro">
-              <a href="./upgrade.html">
-                <i class="nc-icon nc-spaceship"></i>
-                <p>Upgrade to PRO</p>
-              </a>
-            </li>
+
+
+
           </ul>
         </div>
+        <!-- sidebar-menu  -->
       </div>
+      <!-- sidebar-content  -->
+      
+    </nav>
+    <!-- sidebar-wrapper  -->
+    <main class="page-content">
+      <div class="container-fluid">
+        <h2>Admin Dashboard</h2>
+        <hr>
+        <div class="row">
+          
 
-      <div class="main-panel">
-
-        <div class="content">
-
-          <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                <div class="card-body ">
-                  <div class="row">
-                    <div class="col-5 col-md-4">
-                      <div class="icon-big text-center icon-warning">
-                        <i class="nc-icon nc-globe text-warning"></i>
-                      </div>
-                    </div>
-                    <div class="col-7 col-md-8">
-                      <div class="numbers">
-                        <p class="card-category">Capacity</p>
-                        <p class="card-title">150GB
-                        <p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-footer ">
-                  <hr>
-                  <div class="stats">
-                    <i class="fa fa-refresh"></i>
-                    Update Now
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                <div class="card-body ">
-                  <div class="row">
-                    <div class="col-5 col-md-4">
-                      <div class="icon-big text-center icon-warning">
-                        <i class="nc-icon nc-money-coins text-success"></i>
-                      </div>
-                    </div>
-                    <div class="col-7 col-md-8">
-                      <div class="numbers">
-                        <p class="card-category">Revenue</p>
-                        <p class="card-title">$ 1,345
-                        <p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-footer ">
-                  <hr>
-                  <div class="stats">
-                    <i class="fa fa-calendar-o"></i>
-                    Last day
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                <div class="card-body ">
-                  <div class="row">
-                    <div class="col-5 col-md-4">
-                      <div class="icon-big text-center icon-warning">
-                        <i class="nc-icon nc-vector text-danger"></i>
-                      </div>
-                    </div>
-                    <div class="col-7 col-md-8">
-                      <div class="numbers">
-                        <p class="card-category">Errors</p>
-                        <p class="card-title">23
-                        <p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-footer ">
-                  <hr>
-                  <div class="stats">
-                    <i class="fa fa-clock-o"></i>
-                    In the last hour
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                <div class="card-body ">
-                  <div class="row">
-                    <div class="col-5 col-md-4">
-                      <div class="icon-big text-center icon-warning">
-                        <i class="nc-icon nc-favourite-28 text-primary"></i>
-                      </div>
-                    </div>
-                    <div class="col-7 col-md-8">
-                      <div class="numbers">
-                        <p class="card-category">Followers</p>
-                        <p class="card-title">+45K
-                        <p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-footer ">
-                  <hr>
-                  <div class="stats">
-                    <i class="fa fa-refresh"></i>
-                    Update now
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-12">
-              <div class="card ">
-                <div class="card-header ">
-                  <h5 class="card-title">Users Behavior</h5>
-                  <p class="card-category">24 Hours performance</p>
-                </div>
-                <div class="card-body ">
-                  <canvas id=chartHours width="400" height="100"></canvas>
-                </div>
-                <div class="card-footer ">
-                  <hr>
-                  <div class="stats">
-                    <i class="fa fa-history"></i> Updated 3 minutes ago
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card ">
-                <div class="card-header ">
-                  <h5 class="card-title">Email Statistics</h5>
-                  <p class="card-category">Last Campaign Performance</p>
-                </div>
-                <div class="card-body ">
-                  <canvas id="chartEmail"></canvas>
-                </div>
-                <div class="card-footer ">
-                  <div class="legend">
-                    <i class="fa fa-circle text-primary"></i> Opened
-                    <i class="fa fa-circle text-warning"></i> Read
-                    <i class="fa fa-circle text-danger"></i> Deleted
-                    <i class="fa fa-circle text-gray"></i> Unopened
-                  </div>
-                  <hr>
-                  <div class="stats">
-                    <i class="fa fa-calendar"></i> Number of emails sent
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-8">
-              <div class="card card-chart">
-                <div class="card-header">
-                  <h5 class="card-title">NASDAQ: AAPL</h5>
-                  <p class="card-category">Line Chart with Points</p>
-                </div>
-                <div class="card-body">
-                  <canvas id="speedChart" width="400" height="100"></canvas>
-                </div>
-                <div class="card-footer">
-                  <div class="chart-legend">
-                    <i class="fa fa-circle text-info"></i> Tesla Model S
-                    <i class="fa fa-circle text-warning"></i> BMW 5 Series
-                  </div>
-                  <hr />
-                  <div class="card-stats">
-                    <i class="fa fa-check"></i> Data information certified
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-        <app-footer></app-footer>
-      </div>
-    </div>
-  </body>
+        
+ 
 
+        <footer class="text-center">
+          <div class="mb-2">
+        
+          </div>
+    
+        </footer>
+      </div>
+    </main>
+    <!-- page-content" -->
+  </div>
+  <!-- page-wrapper --> 
+
+</body>
