Admin dash changes

--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -91,7 +91,7 @@
     <!-- sidebar-wrapper  -->
     <main class="page-content">
       <div class="container-fluid">
-        <h2>User Dashboard</h2>
+        <h2>Admin Dashboard</h2>
         <hr>
         <div class="row">
           
