Edit admin dash

--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -48,7 +48,7 @@
               <span>General</span>
             </li>
             <li>
-              <a href [routerLink]="'/own_item'">
+              <a href [routerLink]="'/new_admin'">
                 <i class="fa fa-book"></i>
                 <span>Analytics</span>
               </a>
@@ -168,7 +168,7 @@
               class="card-img-top rounded-0" alt="Angular pro sidebar">
 
               <div class="card-body text-center">
-                <h6 class="card-title">User Profile</h6>
+                <h6 class="card-title">Views and posts statistics</h6>
               </div>
             </div>
           </div>
@@ -180,7 +180,7 @@
               class="card-img-top rounded-0" alt="Angular pro sidebar">
 
               <div class="card-body text-center">
-                <h6 class="card-title">User Profile</h6>
+                <h6 class="card-title">Visitors Online</h6>
               </div>
             </div>
           </div>
