change the item-list

--- a/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -53,7 +53,7 @@
                         <li>
                             <a href="href" [routerLink]="'/lostfounditem'">
                                 <i class="fa fa-calendar"></i>
-                                <span>Item List</span>
+                                <span>Lost Or Found</span>
                             </a>
                         </li>
                         <li>
