--- a/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
+++ b/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
@@ -32,24 +32,56 @@
 
                 <div class="input-group form-group">
                   <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-list-ul"></i></span>
+                  </div>
+                  <select name="item" formControlName="item" class="form-control" id="item" type="text"
+                    [ngClass]="{'is-invalid': (item.touched || item.dirty) && item.invalid }">
+                    <div class="invalid-feedback" *ngIf="(item.touched || item.dirty) && item.invalid">
+                      Enter lost item.
+                    </div>
+                    <option selected>{{'LOST_ITEM.ITEM' | translate}}</option>
+                    <option value="phone">{{'LOST_ITEM.ITEM1' | translate}}</option>
+                    <option value="purse">{{'LOST_ITEM.ITEM2' | translate}}</option>
+                    <option value="watch">{{'LOST_ITEM.ITEM3' | translate}}</option>
+                  </select>
+                </div>
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-list-ul"></i></span>
+                  </div>
+                  <select name="location" formControlName="location" class="form-control" id="location" type="text"
+                    [ngClass]="{'is-invalid': (location.touched || location.dirty) && location.invalid }">
+                    <div class="invalid-feedback" *ngIf="(location.touched || location.dirty) && location.invalid">
+                      Enter item lost location.
+                    </div>
+                    <option selected>{{'LOST_ITEM.LOCATION' | translate}}</option>
+                    <option value="Karandeniya">{{'LOST_ITEM.LOCATION1' | translate}}</option>
+                    <option value="Ambalangoda">{{'LOST_ITEM.LOCATION2' | translate}}</option>
+                    <option value="Elpitiya">{{'LOST_ITEM.LOCATION3' | translate}}</option>
+                  </select>
+                </div>
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fa fa-id-card"></i></span>
                   </div>
-                  <input name="location" type="text" class="form-control" formControlName="location" placeholder="location"
-                    [ngClass]="{'is-invalid': (location.touched || location.dirty) && location.invalid }">
-                  <div class="invalid-feedback" *ngIf="(location.touched || location.dirty) && location.invalid">
-                    Enter Location name.
+                  <input name="price" type="text" class="form-control" formControlName="price" placeholder="{{'LOST_ITEM.PRICE' | translate}}"
+                    [ngClass]="{'is-invalid': (price.touched || price.dirty) && price.invalid }">
+                  <div class="invalid-feedback" *ngIf="(price.touched || price.dirty) && price.invalid">
+                    Enter price of lost item.
                   </div>
                 </div>
 
                 <div class="input-group form-group">
                   <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-address-card"></i></span>
+                    <span class="input-group-text"><i class="fa fa-birthday-cake"></i></span>
                   </div>
-                  <textarea class="form-control" name="description" formControlName="description" type="text"
-                    id="exampleFormControlTextarea1" rows="3" placeholder="Lost item Details"
-                    [ngClass]="{'is-invalid': (description.touched || description.dirty) && description.invalid }"></textarea>
-                  <div class="invalid-feedback" *ngIf="(description.touched || description.dirty) && description.invalid">
-                    Enter your item details.
+                  <input class="form-control" bsDatepicker formControlName="lostDate" placeholder="{{'LOST_ITEM.LOST_DATE' | translate}}"
+                    [ngClass]="{'is-invalid': (lostDate.touched || lostDate.dirty) && lostDate.invalid }"
+                    [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }">
+                  <div class="invalid-feedback" *ngIf="(lostDate.touched || lostDate.dirty) && lostDate.invalid">
+                    Enter item lost date.
                   </div>
                 </div>
 
@@ -57,6 +89,18 @@
               <!--end col-md-6-->
 
               <div class="col-md-6">
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-address-card"></i></span>
+                  </div>
+                  <textarea class="form-control" name="description" formControlName="description" type="text"
+                    id="exampleFormControlTextarea1" rows="3" placeholder="{{'LOST_ITEM.DESCRIPTION' | translate}}"
+                    [ngClass]="{'is-invalid': (description.touched || description.dirty) && description.invalid }"></textarea>
+                  <div class="invalid-feedback" *ngIf="(description.touched || description.dirty) && description.invalid">
+                    Enter your item details.
+                  </div>
+                </div>
 
                 <!-- <div class="form-group">
                 <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
@@ -74,55 +118,54 @@
         </div>
 
         <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-          <h3 class="register-heading">Add New Moderator</h3>
-          <form (submit)="onRegisterSubmit()">
+          <h3 class="register-heading">Found Item</h3>
+          <form (submit)="onFoundPostSubmit()" [formGroup]="foundForm">
             <div class="row register-form">
 
               <div class="col-md-6">
 
                 <div class="input-group form-group">
                   <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                    <span class="input-group-text"><i class="fa fa-list-ul"></i></span>
                   </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
-
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-user"></i></span>
-                  </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
-
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-user"></i></span>
-                  </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
-
-                <!-- <div class="form-group">
-                  <select class="form-control">
-                    <option class="hidden" selected disabled>Please select your Security Question</option>
-                    <option>What is your Birth date?</option>
-                    <option>What is Your old Phone Number</option>
-                    <option>What is your Pet Name?</option>
+                  <select name="founditem" formControlName="founditem" class="form-control" id="founditem" type="text"
+                    [ngClass]="{'is-invalid': (founditem.touched || founditem.dirty) && founditem.invalid }">
+                    <div class="invalid-feedback" *ngIf="(founditem.touched || founditem.dirty) && founditem.invalid">
+                      Enter found item.
+                    </div>
+                    <option selected>{{'LOST_ITEM.ITEM' | translate}}</option>
+                    <option value="phone">{{'LOST_ITEM.ITEM1' | translate}}</option>
+                    <option value="purse">{{'LOST_ITEM.ITEM2' | translate}}</option>
+                    <option value="watch">{{'LOST_ITEM.ITEM3' | translate}}</option>
                   </select>
-                </div> -->
+                </div>
 
-                <div class="form-group">
-                  <div class="maxl">
-                    <label class="radio inline">
-                      <input type="radio" name="gender" value="male" checked>
-                      <span> Male </span>
-                    </label>
-                    <label class="radio inline">
-                      <input type="radio" name="gender" value="female">
-                      <span>Female </span>
-                    </label>
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-list-ul"></i></span>
+                  </div>
+                  <select name="foundlocation" formControlName="foundlocation" class="form-control" id="foundlocation" type="text"
+                    [ngClass]="{'is-invalid': (foundlocation.touched || foundlocation.dirty) && foundlocation.invalid }">
+                    <div class="invalid-feedback" *ngIf="(foundlocation.touched || foundlocation.dirty) && foundlocation.invalid">
+                      Enter item found location.
+                    </div>
+                    <option selected>{{'LOST_ITEM.LOCATION' | translate}}</option>
+                    <option value="Karandeniya">{{'LOST_ITEM.LOCATION1' | translate}}</option>
+                    <option value="Ambalangoda">{{'LOST_ITEM.LOCATION2' | translate}}</option>
+                    <option value="Elpitiya">{{'LOST_ITEM.LOCATION3' | translate}}</option>
+                  </select>
+                </div>
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-birthday-cake"></i></span>
+                  </div>
+                  <input class="form-control" bsDatepicker formControlName="foundDate"
+                    placeholder="{{'LOST_ITEM.LOST_DATE' | translate}}"
+                    [ngClass]="{'is-invalid': (foundDate.touched || foundDate.dirty) && foundDate.invalid }"
+                    [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }">
+                  <div class="invalid-feedback" *ngIf="(foundDate.touched || foundDate.dirty) && foundDate.invalid">
+                    Enter item found date.
                   </div>
                 </div>
 
@@ -133,26 +176,14 @@
 
                 <div class="input-group form-group">
                   <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                    <span class="input-group-text"><i class="fa fa-address-card"></i></span>
                   </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
-
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+                  <textarea class="form-control" name="founddescription" formControlName="founddescription" type="text"
+                    id="exampleFormControlTextarea1" rows="3" placeholder="{{'LOST_ITEM.DESCRIPTION' | translate}}"
+                    [ngClass]="{'is-invalid': (founddescription.touched || founddescription.dirty) && founddescription.invalid }"></textarea>
+                  <div class="invalid-feedback" *ngIf="(founddescription.touched || founddescription.dirty) && founddescription.invalid">
+                    Enter found item details.
                   </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
-
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-key"></i></span>
-                  </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
                 </div>
 
 
