Add features to moderator dashboard

--- a/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
@@ -87,10 +87,56 @@
         <h2>Moderator Dashboard</h2>
         <hr>
         <div class="row">
-          
-
         </div>
         
+        <hr>
+        <div class="row">
+
+
+            <div class="row mb-4">
+            <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                <div class="card-header">Found</div>
+                <div class="card-body">
+                  <button type="button" class="btn btn-light btn-lg btn-block">500</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                <div class="card-header">Lost</div>
+                <div class="card-body">
+                  <button type="button" class="btn btn-light btn-lg btn-block">150</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                <div class="card-header">Complain</div>
+                <div class="card-body">
+                  <button type="button" class="btn btn-light btn-lg btn-block">300</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-white bg-primary">
+                <div class="card-header">ooo</div>
+                <div class="card-body">
+                  <button type="button" class="btn btn-light btn-lg btn-block">500</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+        </div>
+        <hr>
+        
+
+        
+
+
  
 
         <footer class="text-center">
@@ -104,5 +150,6 @@
     <!-- page-content" -->
   </div>
   <!-- page-wrapper --> 
+  
 
 </body>
